# ifudodo-mix

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/ifudodo_mix/: acestep_generator.py  audio_utils.py  base_generator.py  bot.py  config.py  generator.py  generator_factory.py  musicgen_stage.py  prompt_builder.py  style_researcher.py
