[project]
name = "ifudodo-mix"
version = "0.1.0"
description = "Discord bot that generates Ifuudoudou music mixes"
requires-python = ">=3.10,<3.12"

[tool.pixi.workspace]
channels = ["conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
ffmpeg = ">=6,<7"
pkg-config = "*"

# Shared dependencies (both backends)
[tool.pixi.pypi-dependencies]
discord-py = ">=2.3"
python-dotenv = ">=1.0.0"
ifudodo-mix = { path = ".", editable = true }

[tool.pixi.pypi-options]
no-binary = ["av"]

# MusicGen backend
[tool.pixi.feature.musicgen.dependencies]
python = "3.10.*"
numpy = "<2.0.0"

[tool.pixi.feature.musicgen.pypi-dependencies]
audiocraft = { git = "https://github.com/facebookresearch/audiocraft.git" }
torch = ">=2.1.0,<2.4"
torchaudio = ">=2.1.0,<2.4"
transformers = ">=4.30.0,<4.46"

# ACE-Step v1.0 backend
[tool.pixi.feature.acestep.dependencies]
python = "3.10.*"

[tool.pixi.feature.acestep.pypi-dependencies]
ace-step = { git = "https://github.com/ace-step/ACE-Step.git" }
torch = ">=2.4.0"
torchaudio = ">=2.4.0"
torchcodec = ">=0.1.0"

# ACE-Step v1.5 backend (cloned to vendor/, PYTHONPATH approach)
[tool.pixi.feature.acestep15.dependencies]
python = "3.11.*"

[tool.pixi.feature.acestep15.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu128"]

[tool.pixi.feature.acestep15.pypi-dependencies]
torch = "==2.10.0"
torchaudio = "==2.10.0"
torchvision = "==0.25.0"
nano-vllm = { git = "https://github.com/ACE-Step/ACE-Step-1.5.git", subdirectory = "acestep/third_parts/nano-vllm" }
transformers = ">=4.51.0,<4.58.0"
diffusers = "*"
soundfile = ">=0.13.1"
loguru = ">=0.7.3"
einops = ">=0.8.1"
accelerate = ">=1.12.0"
numba = ">=0.63.1"
vector-quantize-pytorch = ">=1.27.15"
torchcodec = ">=0.9.1"
torchao = ">=0.14.1,<0.16.0"
peft = ">=0.18.0"
triton = ">=3.0.0"
scipy = ">=1.10.1"
toml = "*"
modelscope = "*"
safetensors = "*"
lightning = ">=2.0.0"

[tool.pixi.environments]
musicgen = ["musicgen"]
acestep = ["acestep"]
acestep15 = ["acestep15"]

[tool.pixi.tasks]
start = "python -m ifudodo_mix"
clone-acestep15 = "git clone --depth 1 https://github.com/ACE-Step/ACE-Step-1.5.git vendor/ace-step-15 2>/dev/null || echo 'Already cloned'"
start-v15 = { cmd = "python -m ifudodo_mix", env = { PYTHONPATH = "vendor/ace-step-15" }, depends-on = ["clone-acestep15"] }
