[project]
name = "ifudodo-mix"
version = "0.2.0"
description = "Discord bot that generates Ifuudoudou music mixes using ACE-Step 1.5"
requires-python = ">=3.11,<3.12"

[tool.pixi.workspace]
channels = ["conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.11.*"
ffmpeg = ">=6,<7"
pkg-config = "*"

[tool.pixi.pypi-options]
no-binary = ["av"]
extra-index-urls = ["https://download.pytorch.org/whl/cu128"]

[tool.pixi.pypi-dependencies]
discord-py = ">=2.3"
python-dotenv = ">=1.0.0"
ifudodo-mix = { path = ".", editable = true }
torch = "==2.10.0"
torchaudio = "==2.10.0"
torchvision = "==0.25.0"
nano-vllm = { git = "https://github.com/ACE-Step/ACE-Step-1.5.git", subdirectory = "acestep/third_parts/nano-vllm" }
transformers = ">=4.51.0,<4.58.0"
diffusers = "*"
soundfile = ">=0.13.1"
loguru = ">=0.7.3"
einops = ">=0.8.1"
accelerate = ">=1.12.0"
numba = ">=0.63.1"
vector-quantize-pytorch = ">=1.27.15"
torchcodec = ">=0.9.1"
torchao = ">=0.14.1,<0.16.0"
peft = ">=0.18.0"
triton = ">=3.0.0"
scipy = ">=1.10.1"
toml = "*"
modelscope = "*"
safetensors = "*"
ollama = ">=0.4.0"
duckduckgo-search = ">=7.0.0"
lightning = ">=2.0.0"

[tool.pixi.tasks]
clone-acestep = "git clone --depth 1 https://github.com/ACE-Step/ACE-Step-1.5.git vendor/ace-step-15 2>/dev/null || echo 'Already cloned'"
start = { cmd = "python -m ifudodo_mix", env = { PYTHONPATH = "vendor/ace-step-15" }, depends-on = ["clone-acestep"] }
